--- a/infra/ansible/roles/knot_authoritative/templates/knot.conf.j2
+++ b/infra/ansible/roles/knot_authoritative/templates/knot.conf.j2
@@ -123,6 +123,8 @@ zone:
   - domain: doh.mesh.nycmesh.net
     file: doh.mesh.nycmesh.net.zone
     acl: acl-update-doh
+  - domain: nn.mesh.nycmesh.net
+    file: nn.zone
   - domain: ha.mesh.nycmesh.net
     file: ha.mesh.nycmesh.net.zone
     acl: acl-update-ha
