Revert "Fix cert"
This reverts commit a76af689a84b11e757943607e03a18a29014474b.

--- a/infra/ansible/roles/knot_authoritative/templates/knot.conf.j2
+++ b/infra/ansible/roles/knot_authoritative/templates/knot.conf.j2
@@ -132,7 +132,7 @@ acl:
     update-type: [TXT]
     update-owner-match: equal
     update-owner-name: acme-challenge.jenkins.mesh.nycmesh.net.
-    key: jenkins.mesh.nycmesh.net.
+    key: k8s.lb.prod1
 
 zone:
   - domain: mesh
